force-app/main/default/objects/vlocity_cmt__OrderGroup__c/fields/vlocity_cmt__OrderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrderId__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Groups</relationshipLabel>
    <relationshipName>OrderGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>