force-app/main/default/objects/vlocity_cmt__OrderGroup__c/fields/vlocity_cmt__QuoteGroupId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corresponding Quote Group from which this record is created</description>
    <label>Quote Group</label>
    <referenceTo>vlocity_cmt__QuoteGroup__c</referenceTo>
    <relationshipLabel>Group Quotes</relationshipLabel>
    <relationshipName>GroupQuote</relationshipName>
    <type>Lookup</type>
</CustomField>